--- a/src/FabrikamFiber.Web/Views/Shared/_Layout.cshtml
+++ b/src/FabrikamFiber.Web/Views/Shared/_Layout.cshtml
@@ -36,6 +36,7 @@
                         <li>Hello, @User.Identity.Name!</li>
                     }
                     <li>@Html.ActionLink("Dashboard", "Index", "Home")</li>
+                    <li>@Html.ActionLink("SecurePage", "Secure Page", "Home")</li>
                     <li>@Html.ActionLink("Tickets", "Index", "ServiceTickets")</li>
                     <li>@Html.ActionLink("Customers", "Index", "Customers")</li>
                     <li>@Html.ActionLink("Employees", "Index", "Employees")</li>
